# version 0.66

2022-03-31
 - Updated query and user-group name pattern.
 2022-04-08
 - Added redirect_uri to client info API.
2022-04-11
 - Added registration_date, refresh_token_expiry, source and is_permitted
   to the oauth2_client database table, and updated the OAuth2 client 
   registration mechanism.
 - Added authorization request with GET and deprecated that with POST.
2022-04-13
 - Updated OAuth2Client list API (added redirect_uri, registration_date, 
   permitted, source to OAuth2UserClientDto).
2022-04-20
 - Updated authorization error response. (Included error and error 
   description in the client redirect URI except for missing or 
   invalid client id or redirect URI.
2022-04-21
 - Added a new API: list plugins (e.g for marketplace)
 

# version 0.65.2

2022-03-03
 - Removed VCLoader.
 - Added foreign keys to the DB tables of access and refresh token scopes.
2022-03-07
 - Added more parameter checks and OAuth2Client web-service tests.
2022-03-17
 - Updated admin filter by using admin token and role checks.
2022-03-18
 - Added an OAuth2 admin API to delete expired/revoked access and refresh tokens.
2022-03-28
 - Updated admin filter (admintoken as a form param) and uses 
   it for the closing index reader API. 
 - Removed unused admin API: clear access token cache.
2022-03-29
 - Updated and moved admin API: updateClientPrivilege to OAuth2AdminController

# version 0.65.1

2022-03-01
 - Restricts the field retrieval web-service to admin only.

# version 0.65

!!! includes security updates - please update all Kustvakt libraries
!!! Please also update Krill to version 0.60.2 and Koral to version 0.38 

2021-12-02
 - Updated VC cache.
2021-12-03
 - Enabled listing system vc for authorized users.
2021-12-08
 - Removed koralQuery and statistics from VC list.
 - Added a web-service to retrieve KoralQuery of a VC
2021-12-10
 - [security] Updated log4j libs due to CVE-2021-44228.
2021-12-13
 - Fixed broken test suite.
2022-01-03