@@ -2,7 +2,7 @@
 
 2022-03-31
  - Updated query and user-group name pattern.
- 2022-04-08
+2022-04-08
  - Added redirect_uri to client info API.
 2022-04-11
  - Added registration_date, refresh_token_expiry, source and is_permitted
@@ -18,8 +18,10 @@
    invalid client id or redirect URI.
 2022-04-21
  - Added a new API: list plugins (e.g for marketplace)
+2022-04-22 
+ - Added redirect URI validation in authorization request (addressed #374)
  
-
+ 
 # version 0.65.2
 
 2022-03-03
